[package]
name = "actflow-agent-sdk"
authors = ["Yunis Du <yunis@88.com>"]
license = "MIT"
version = "0.1.1"
description = "A Rust SDK for building agents for Actflow."
repository = "https://github.com/yunis-du/actflow-agent-sdk"
edition = "2024"
include = ["src/**/*", "proto/**/*", "build.rs", "Cargo.toml", "README.md"]

[dependencies]
prost = "0.14"
prost-types = "0.14"
tonic = "0.14"
tonic-prost = "0.14"
tokio = { version = "1", features = ["sync", "rt-multi-thread", "macros"] }
tokio-stream = "0.1"
serde_json = "1"

[build-dependencies]
tonic-prost-build = "0.14"
